# brave-core

android/: brave_java_sources.gni
android/java/org/chromium/chrome/browser/ntp/: BraveIncognitoNewTabPageView.java
android/java/org/chromium/chrome/browser/preferences/: BraveSearchEngineAdapter.java
android/java/strings/: android_brave_strings.grd
browser/: BUILD.gn  brave_profile_prefs.cc
browser/extensions/: BUILD.gn
browser/gcm_driver/: BUILD.gn  brave_gcm_channel_status.cc  brave_gcm_channel_status.h  push_messaging_browsertest.cc  push_messaging_service_unittest.cc
browser/profiles/: BUILD.gn  brave_profile_manager.cc  brave_profile_manager.h
browser/ui/: BUILD.gn
browser/ui/webui/: brave_webui_source.cc
browser/ui/webui/settings/: brave_privacy_handler.cc
chromium_src/components/gcm_driver/: gcm_driver_desktop.cc
common/: pref_names.cc  pref_names.h
components/brave_gcm_driver/: BUILD.gn  brave_gcm_channel_status_syncer.cc  brave_gcm_channel_status_syncer.h  push_messaging_browsertest.cc
components/brave_welcome_ui/containers/: app.tsx
components/resources/: brave_components_strings.grd
patches/: chrome-VERSION.patch  chrome-android-java-src-org-chromium-chrome-browser-preferences-MainPreferences.java.patch
test/: BUILD.gn
