import("//build/buildflag_header.gni")
import("//components/gcm_driver/config.gni")

static_library("brave_gcm_driver") {
  if (!use_gcm_from_platform) {
    sources = [
      "brave_gcm_channel_status_syncer.cc",
      "brave_gcm_channel_status_syncer.h",
    ]

    deps = [
      "//components/gcm_driver:gcm_buildflags",
      "//components/gcm_driver:gcm_driver",
      "//components/prefs",
      "//net",
      "//services/network/public/mojom",
      # For profile.h
      "//components/domain_reliability",
      "//content/public/browser",
      "//content/public/common",
    ]
  }
}
