import("//build/buildflag_header.gni")
import("//components/gcm_driver/config.gni")

static_library("brave_gcm_driver") {
  if (!use_gcm_from_platform) {
    sources = [
      "brave_gcm_channel_status_syncer.cc",
      "brave_gcm_channel_status_syncer.h",
    ]

    deps = [
      "//components/prefs",
      "//net",
      "//services/network/public/mojom",
    ]
  }
}
